// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editor is updated with new text if it does not match current selection 1`] = `
Object {
  "blockMap": Map {
    "a" => Object {
      "characterList": Array [
        Object {
          "entity": null,
          "style": Set {},
        },
        Object {
          "entity": null,
          "style": Set {},
        },
        Object {
          "entity": null,
          "style": Set {},
        },
        Object {
          "entity": null,
          "style": Set {},
        },
        Object {
          "entity": null,
          "style": Set {},
        },
        Object {
          "entity": null,
          "style": Set {},
        },
        Object {
          "entity": null,
          "style": Set {},
        },
      ],
      "data": Object {},
      "depth": 0,
      "key": "a",
      "text": "Orsenal",
      "type": "unstyled",
    },
  },
  "selectionAfter": Object {
    "anchorKey": "a",
    "anchorOffset": 1,
    "focusKey": "a",
    "focusOffset": 1,
    "hasFocus": false,
    "isBackward": false,
  },
  "selectionBefore": Object {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 1,
    "hasFocus": false,
    "isBackward": false,
  },
}
`;

exports[`editor selectionstate is updated if new text matches current selection 1`] = `
Object {
  "anchorKey": "a",
  "anchorOffset": 1,
  "focusKey": "a",
  "focusOffset": 1,
  "hasFocus": false,
  "isBackward": false,
}
`;

exports[`editor selectionstate is updated if new text matches current selection and user selected backwards 1`] = `
Object {
  "anchorKey": "a",
  "anchorOffset": 1,
  "focusKey": "a",
  "focusOffset": 1,
  "hasFocus": false,
  "isBackward": false,
}
`;
